--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@ data-parallax="true" style="background-image: url('./img/pexels/background3.jpg'
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
                 <div class="brand">
-                    <h1>Richard la que no aprende</h1>
+                    <h1>Richard la que no aprende x2</h1>
                 </div>
             </div>
         </div>
